[project]
name = "comfyui-loadimage-advanced"
description = "This is a node that simply integrates LoadImage, Vae Encode, and Upscale."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/souki202/ComfyUI-LoadImage-Advanced"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-LoadImage-Advanced"
Icon = ""
