[project]
name = "comfyui-loadimage-advanced"
description = "This is a node that simply integrates LoadImage, Vae Encode, Upscale, Resolution factor correction, and Color Adjustment."
version = "1.2.0"
license = {file = "LICENSE.txt"}

[project.urls]
Repository = "https://github.com/souki202/ComfyUI-LoadImage-Advanced"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "souki202"
DisplayName = "ComfyUI-LoadImage-Advanced"
Icon = "https://totori-general-purpose-public.s3.ap-northeast-1.amazonaws.com/00063-222406234-400px.png"
